--- a/src/components/AboutUs/cover/Cover.css
+++ b/src/components/AboutUs/cover/Cover.css
@@ -1,227 +1,50 @@
-/*new*/
-.cover-about__us {
-  background-color: #fffce8;
-  margin-top: -3.5rem;
-  margin-left: -3rem;
-  margin-right: -3rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  padding: 4rem 2rem;
+.cover{
+  background: linear-gradient(180deg, rgba(255, 171, 56, 0.22) 0%, rgba(255, 252, 232, 0) 100%);
+  margin: -3.4rem -3.2rem 0rem -3rem;
+  padding: 5rem 0rem 0rem 5rem;
 }
-
-.cover__text {
-  -ms-flex-item-align: start;
-  align-self: flex-start;
+.cover-title{
+  font-family:Roboto;
+  font-size: 3.5rem;
+  margin-bottom: 6rem;
+  padding-top: 3rem;
 }
-
-.cover__text h1,
-.cover__text p,
-.cover__text a,
-.cover-footer p {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.cover-title2{
+  color:#FAB84C;
 }
-
-.cover__text h1 {
-  color: #3e313e;
-  font-size: 4rem;
-  font-weight: 900;
-  text-shadow: 0px 1.5px, 1.5px 0px, 1.5px 1.5px;
-  margin: 5rem 0;
-}
-/* 
-.circle-img-wrapper{
-  position: absolute;
-} */
-.cover__text p {
+.cover-sub-title{
   font-size: 1.5rem;
-  margin-bottom: 2.5rem;
-  font-weight: 600;
-  width: 80%;
+  font-family: 'Poppins', sans-serif;
+  margin-bottom: 2rem;
 }
-
-.cover__text-link {
-  letter-spacing: 0.2rem;
-  color: #fff;
-  border: 1px solid #fab84c;
-  background-color: #fab84c;
-  font-size: 1.2rem;
-  font-weight: 900;
+.cover-orderNow{
+  background-color: #FAB84C;
   padding: 1rem 3rem;
-  border-radius: 30px;
+  border-radius: 5rem;
+  border: none;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.2rem;
 }
-
-.cover__text-link:hover {
-  background-color: #fff;
-  color: #fab84c;
-}
-
-.img-container__aboutus {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+.circle-img-wrapper{
   align-items: center;
-  width: 15rem;
-  height: 28rem;
+  text-align: center;
 }
-
-.img-container__aboutus img {
-  height: 100%;
-  width: 100%;
+.circle-img{
+  width: 50%;
+  position: relative;
+  z-index: 3;
+  left: 20%;
 }
-
-.img-container__aboutus img:first-of-type {
-  -webkit-transform: translateX(100px);
-  -ms-transform: translateX(100px);
-  transform: translateX(100px);
+.rectangle-left{
+  position: relative;
+  z-index: 5;
+  top: 7rem;
+  left: -50%;
 }
-
-.img-container__aboutus img:last-of-type {
-  -webkit-transform: translateX(-100px);
-  -ms-transform: translateX(-100px);
-  transform: translateX(-100px);
-}
-
-.cover-footer {
-  -ms-flex-preferred-size: 100%;
-  flex-basis: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.cover-footer img {
-  width: 6rem;
-  height: 2rem;
-  margin-right: 1rem;
-}
-
-.cover-footer p {
-  font-size: 1rem;
-}
-
-@media (max-width: 960px) {
-  .cover-about__us {
-    margin-left: 0;
-    margin-right: 0;
-  }
-  .cover-about__us {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-  }
-
-  .cover__text {
-    -ms-flex-item-align: center;
-    -ms-grid-row-align: center;
-    align-self: center;
-    text-align: center;
-  }
-
-  .cover__text h1 {
-    font-size: 1.8rem;
-    text-align: center;
-    margin-bottom: 1rem;
-  }
-
-  .cover__text p {
-    font-size: 1rem;
-    text-align: center;
-    width: 100%;
-    font-weight: normal;
-  }
-
-  .cover__text-link {
-    display: inline-block;
-    font-size: 1rem;
-    padding: 0.4rem 2rem;
-    margin-bottom: 1rem;
-  }
-
-  .img-container__aboutus {
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    margin-bottom: 2rem;
-  }
-  /* .img-container__aboutus img {
-    width: 45rem;
-    height: 80rem;
-  } */
-
-  .img-container__aboutus img:first-of-type {
-    -webkit-transform: translateX(70px);
-    -ms-transform: translateX(70px);
-    transform: translateX(70px);
-  }
-
-  .img-container__aboutus img:last-of-type {
-    -webkit-transform: translateX(-70px);
-    -ms-transform: translateX(-70px);
-    transform: translateX(-70px);
-  }
-
-  .cover-footer {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-
-  .cover-footer img {
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    height: -webkit-max-content;
-    height: -moz-max-content;
-    height: max-content;
-    margin-right: 0;
-    margin-bottom: 10px;
-  }
-
-  .cover-footer p {
-    font-size: 10px;
-  }
-}
-
-@media (max-width: 640px) {
-  .cover-about__us {
-    margin-left: 0;
-    padding: 2rem 4rem;
-    margin-right: 0;
-  }
+.rectangle-right{
+  position: relative;
+  z-index: 5;
+  top: -6rem;
+  left: 10rem;
 }
